Fix to the header font on mobile version

--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -132,7 +132,7 @@
 
 @media screen and (max-width: 650px) {
     .gpt3__header h1 {
-        font-size: 48px;
+        font-size: 34px;
         line-height: 60px;
     }
 
@@ -159,7 +159,7 @@
 @media screen and (max-width: 490px) {
     
     .gpt3__header h1 {
-        font-size: 36px;
+        font-size: 22px;
         line-height: 24px;
     }
 
